--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
   "java.format.settings.url": "eclipse-formatter.xml",
   "java.format.settings.profile": "Planetiler",
-  "java.completion.importOrder": [
-    "#",
-    ""
-  ],
+  "java.completion.importOrder": ["#", ""],
   "java.sources.organizeImports.staticStarThreshold": 5,
   "java.sources.organizeImports.starThreshold": 999,
-  "java.saveActions.organizeImports": true
+  "java.saveActions.organizeImports": true,
+  "java.debug.settings.onBuildFailureProceed": true
 }
