--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "java.sources.organizeImports.staticStarThreshold": 5,
   "java.sources.organizeImports.starThreshold": 999,
   "java.saveActions.organizeImports": true,
-  "java.debug.settings.onBuildFailureProceed": true
+  "java.debug.settings.onBuildFailureProceed": true,
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
